--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,32 +1,27 @@
-# Database configuration for MySQL
-database=mysql
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}  # Updated URL with SSL and key retrieval options
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
+# MySQL Datasource configuration
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
+spring.datasource.username=${MYSQL_USER:petclinic}
+spring.datasource.password=${MYSQL_PASSWORD:petclinic}
 
 # Disable SQL initialization since it's done manually
 spring.sql.init.mode=never
 
-# Use MySQL 8 Dialect for Hibernate
+# MySQL 8 Dialect for Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Web
-spring.thymeleaf.mode=HTML
+# Disable automatic schema creation
+spring.jpa.hibernate.ddl-auto=none
 
-# JPA configuration
-spring.jpa.hibernate.ddl-auto=none  # Schema creation is done manually
+# JPA Configuration
 spring.jpa.open-in-view=true
 
-# Internationalization
-spring.messages.basename=messages/messages
+# Prometheus actuator exposure
+management.endpoints.web.exposure.include=health,info,prometheus
 
-# Actuator endpoints exposure
-management.endpoints.web.exposure.include=*
-
-# Logging levels for debugging
+# Logging for SQL
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-# Maximum time static resources should be cached
+# Cache control for static resources
 spring.web.resources.cache.cachecontrol.max-age=12h
