--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,26 @@
   <artifactId>spring-webmvc</artifactId>
   <version>6.1.13</version> <!-- Updated version -->
    </dependency>
+     <!-- Jakarta Validation API -->
+    <dependency>
+        <groupId>jakarta.validation</groupId>
+        <artifactId>jakarta.validation-api</artifactId>
+        <version>3.0.2</version>
+    </dependency>
 
+    <!-- Java Caching API (JSR-107) -->
+    <dependency>
+        <groupId>javax.cache</groupId>
+        <artifactId>cache-api</artifactId>
+        <version>1.1.1</version>
+    </dependency>
+
+    <!-- Ehcache for JSR-107 Caching -->
+    <dependency>
+        <groupId>org.ehcache</groupId>
+        <artifactId>ehcache</artifactId>
+        <version>3.9.6</version>
+    </dependency>
   </dependencies>
 
   <build>
