--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <scope>test</scope>
+    </dependency>
 
     <!-- Caching Libraries -->
     <dependency>
