--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,29 +1,13 @@
-# Use H2 in-memory database for testing
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
+# H2 Database configuration for tests
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MYSQL
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.datasource.platform=h2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop  # Automatically create and drop the schema for testing
 
-# Hibernate dialect for H2
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-
-# Disable SQL initialization (no need for schema.sql or data.sql in test profile)
-spring.sql.init.mode=never
-
-# Disable caching during tests
-spring.cache.type=none
-
-# Logging for testing
+# Logging
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
-
-# Server port during testing (if needed)
-server.port=8081
-
-# Actuator for monitoring (disable in tests)
-management.endpoints.web.exposure.include=none
-
-# Test-specific settings (e.g., disable certain features or enable others for testing)
