--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,8 +4,12 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Ensure Hibernate creates and drops the schema for testing
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Enable the H2 Console for debugging (optional)
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop  # Automatically create and drop the schema for testing
 
 # Logging
 logging.level.org.springframework=INFO
