--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,17 +1,4 @@
-# H2 Database configuration for tests
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MYSQL
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# Ensure Hibernate creates and drops the schema for testing
-spring.jpa.hibernate.ddl-auto=create-drop
-
-# Enable the H2 Console for debugging (optional)
-spring.h2.console.enabled=true
-
-# Logging
-logging.level.org.springframework=INFO
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+# Ensure that SQL initialization is performed during tests
+spring.sql.init.mode=always
+spring.datasource.schema=classpath:db/mysql/schema.sql
+spring.datasource.data=classpath:db/mysql/data.sql
