--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <jacoco.version>0.8.12</jacoco.version>
-    <argLine>-javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar=destfile=${project.build.directory}/jacoco.exec,append=true</argLine>
   </properties>
 
   <dependencies>
@@ -196,27 +195,37 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
         <configuration>
-          <argLine>${argLine}</argLine>
+          <includes>
+            <include>**/*Test.java</include> <!-- Include all Test cases -->
+          </includes>
+          <argLine>${argLine}</argLine> <!-- Ensures JaCoCo agent is hooked into Surefire -->
         </configuration>
       </plugin>
-
-      <!-- Failsafe Plugin for Integration Testing -->
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.0.0-M5</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <argLine>${argLine}</argLine>
-        </configuration>
-      </plugin>
+   <groupId>org.apache.maven.plugins</groupId>
+   <artifactId>maven-surefire-plugin</artifactId>
+   <version>3.0.0-M5</version>
+   <configuration>
+      <argLine>${argLine}</argLine>
+   </configuration>
+</plugin>
+
+<plugin>
+   <groupId>org.apache.maven.plugins</groupId>
+   <artifactId>maven-failsafe-plugin</artifactId>
+   <version>3.0.0-M5</version>
+   <executions>
+      <execution>
+         <goals>
+            <goal>integration-test</goal>
+            <goal>verify</goal>
+         </goals>
+      </execution>
+   </executions>
+   <configuration>
+      <argLine>${argLine}</argLine>
+   </configuration>
+</plugin>
     </plugins>
   </build>
 
@@ -239,4 +248,4 @@
     </repository>
   </repositories>
 
-</project>
+</project> 
