--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql-db
-  namespace: dev
+  name: mysql-db-qa
+  namespace: qa
 spec:
   replicas: 1
   selector:
@@ -22,22 +22,22 @@ spec:
         - name: MYSQL_USER
           valueFrom:
             secretKeyRef:
-              name: db-secrets
+              name: db-secrets-qa
               key: MYSQL_USER
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: db-secrets
+              name: db-secrets-qa
               key: MYSQL_PASSWORD
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: db-secrets
+              name: db-secrets-qa
               key: MYSQL_ROOT_PASSWORD
         - name: MYSQL_DATABASE
           valueFrom:
             configMapKeyRef:
-              name: app-config
+              name: app-config-qa
               key: MYSQL_DATABASE
         volumeMounts:
         - mountPath: /var/lib/mysql
@@ -46,4 +46,4 @@ spec:
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
-          claimName: mysql-pvc  # Must match the PersistentVolumeClaim defined earlier
+          claimName: mysql-pvc-qa  # Must match the PersistentVolumeClaim defined earlier
