--- a/k8s/mysql-pvc.yaml
+++ b/k8s/mysql-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pvc
+  name: mysql-pvc-qa
   namespace: qa                     # Specify the namespace
 spec:
   accessModes:
