--- a/k8s/mysql-service.yaml
+++ b/k8s/mysql-service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-service
-  namespace: dev
+  name: mysql-service-qa
+  namespace: qa
 spec:
   type: ClusterIP  
   ports:
