--- a/k8s/petclinic-deployment.yaml
+++ b/k8s/petclinic-deployment.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: petclinic-app
-  namespace: dev
+  name: petclinic-app-qa
+  namespace: qa
 spec:
   replicas: 2
   selector:
@@ -24,20 +24,20 @@ spec:
         - name: MYSQL_URL
           valueFrom:
             configMapKeyRef:
-              name: app-config
+              name: app-config-qa
               key: MYSQL_URL
         - name: MYSQL_USER
           valueFrom:
             secretKeyRef:
-              name: db-secrets
+              name: db-secrets-qa
               key: MYSQL_USER
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: db-secrets
+              name: db-secrets-qa
               key: MYSQL_PASSWORD
         - name: MYSQL_DATABASE
           valueFrom:
             configMapKeyRef:
-              name: app-config
+              name: app-config-qa
               key: MYSQL_DATABASE
