--- a/k8s/petclinic-service.yaml
+++ b/k8s/petclinic-service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: petclinic-service
-  namespace: dev
+  name: petclinic-service-qa
+  namespace: qa
 spec:
   type: LoadBalancer
   ports:
