--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 spring.sql.init.mode=always
 
 # Datasource configuration for MySQL
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service-qa:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
 spring.datasource.username=${MYSQL_USER:petclinic}
 spring.datasource.password=${MYSQL_PASSWORD:petclinic}
 
@@ -26,9 +26,15 @@ spring.thymeleaf.mode=HTML
 # Internationalization settings
 spring.messages.basename=messages/messages
 
-# Actuator for Prometheus monitoring
+# Actuator for Prometheus monitoring and health checks
 management.endpoints.web.exposure.include=health,info,prometheus
 management.metrics.export.prometheus.enabled=true
+
+# Expose Actuator on all network interfaces for external access
+management.server.address=0.0.0.0
+
+# Enable detailed health information
+management.endpoint.health.show-details=always
 
 # Logging configuration for better debugging
 logging.level.org.springframework=INFO
