--- a/k8s/mysql-pvc.yaml
+++ b/k8s/mysql-pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pvc-qa
-  namespace: qa                     # Specify the namespace
+  name: mysql-pvc-preprod
+  namespace: pre-prod                     # Specify the namespace
 spec:
   accessModes:
     - ReadWriteOnce                   # Same access mode as the PV
   storageClassName: manual            # This matches the storage class name used in the PV
   resources:
     requests:
-      storage: 4Gi                    # Same size as the PV
+      storage: 2Gi                    # Same size as the PV
