--- a/k8s/petclinic-service.yaml
+++ b/k8s/petclinic-service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: petclinic-service-qa
-  namespace: qa
+  name: petclinic-service-preprod
+  namespace: pre-prod
 spec:
   type: LoadBalancer
   ports:
