--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 spring.sql.init.mode=always
 
 # Datasource configuration for MySQL
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service-qa:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service-preprod:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
 spring.datasource.username=${MYSQL_USER:petclinic}
 spring.datasource.password=${MYSQL_PASSWORD:petclinic}
 
