--- a/k8s/mysql-pvc.yaml
+++ b/k8s/mysql-pvc.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pvc-preprod
-  namespace: pre-prod                     # Specify the namespace
+  name: mysql-pvc-prod
+  namespace: prod                     # Specify the namespace
 spec:
   accessModes:
     - ReadWriteOnce                   # Same access mode as the PV
