--- a/k8s/mysql-service.yaml
+++ b/k8s/mysql-service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-service-preprod
-  namespace: pre-prod
+  name: mysql-service-prod
+  namespace: prod
 spec:
   type: ClusterIP  
   ports:
