--- a/k8s/petclinic-deployment.yaml
+++ b/k8s/petclinic-deployment.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: petclinic-app-preprod
-  namespace: pre-prod
+  name: petclinic-app-prod
+  namespace: prod
 spec:
   replicas: 2
   selector:
@@ -25,20 +25,20 @@ spec:
         - name: MYSQL_URL
           valueFrom:
             configMapKeyRef:
-              name: app-config-preprod
+              name: app-config-prod
               key: MYSQL_URL
         - name: MYSQL_USER
           valueFrom:
             secretKeyRef:
-              name: db-secrets-preprod
+              name: db-secrets-prod
               key: MYSQL_USER
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: db-secrets-preprod
+              name: db-secrets-prod
               key: MYSQL_PASSWORD
         - name: MYSQL_DATABASE
           valueFrom:
             secretKeyRef:
-              name: db-secrets-preprod
+              name: db-secrets-prod
               key: MYSQL_DATABASE  # Updated to use the secret key instead of ConfigMap
