--- a/k8s/petclinic-service.yaml
+++ b/k8s/petclinic-service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: petclinic-service-preprod
-  namespace: pre-prod
+  name: petclinic-service-prod
+  namespace: prod
 spec:
   type: LoadBalancer
   ports:
