--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
-
+  
     <!-- MySQL connector -->
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
+      <version>8.0.x</version>
       <scope>runtime</scope>
     </dependency>
 
