--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,5 +1,5 @@
 # MySQL Datasource configuration
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service-prod:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
 spring.datasource.username=${MYSQL_USER:petclinic}
 spring.datasource.password=${MYSQL_PASSWORD:petclinic}
 
