--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,8 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 
 # Server port configuration
 server.port=8081
+
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
+
