--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 spring.sql.init.mode=always
 
 # Datasource configuration for MySQL
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service-qa:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
-spring.datasource.username=${MYSQL_USER:petclinic}
-spring.datasource.password=${MYSQL_PASSWORD:petclinic}
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 
 # MySQL Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
