--- a/k8s/petclinic-deployment.yaml
+++ b/k8s/petclinic-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: petclinic
-        image: 905418425077.dkr.ecr.ap-south-1.amazonaws.com/dev/petclinic:842aefe-14
+        image: 905418425077.dkr.ecr.ap-south-1.amazonaws.com/qa-petclinic:1a3509e-145
         ports:
         - containerPort: 8081 
         env:
